--- a/stylesheets/screen.css
+++ b/stylesheets/screen.css
@@ -129,6 +129,13 @@ section {
 }
 
 /* line 89, ../sass/screen.scss */
+nav a.arrow {
+  font-size: 1.5em;
+  display: block;
+  padding-top: 22px;
+}
+
+/* line 95, ../sass/screen.scss */
 .panel, .m-b, .marlene, nav {
   position: fixed;
   visibility: hidden;
@@ -137,58 +144,37 @@ section {
   width: 100%;
   max-width: 2000px;
 }
-/* line 96, ../sass/screen.scss */
+/* line 102, ../sass/screen.scss */
 .panel .container, .m-b .container, .marlene .container, nav .container {
   position: absolute;
   width: 100%;
 }
-/* line 99, ../sass/screen.scss */
+/* line 105, ../sass/screen.scss */
 .panel .container .copy, .m-b .container .copy, .marlene .container .copy, nav .container .copy {
   display: block;
 }
-/* line 101, ../sass/screen.scss */
+/* line 107, ../sass/screen.scss */
 .panel .container .copy h1, .m-b .container .copy h1, .marlene .container .copy h1, nav .container .copy h1 {
   max-width: 60% !important;
 }
-/* line 104, ../sass/screen.scss */
+/* line 110, ../sass/screen.scss */
 .panel .container .copy h1, .m-b .container .copy h1, .marlene .container .copy h1, .panel .container .copy p, .m-b .container .copy p, .marlene .container .copy p, nav .container .copy h1, nav .container .copy p {
   max-width: 40%;
   display: block;
   margin: 15px 0 0 20px;
 }
-/* line 108, ../sass/screen.scss */
+/* line 114, ../sass/screen.scss */
 .panel .container .copy h1:first-child, .m-b .container .copy h1:first-child, .marlene .container .copy h1:first-child, .panel .container .copy p:first-child, .m-b .container .copy p:first-child, .marlene .container .copy p:first-child, nav .container .copy h1:first-child, nav .container .copy p:first-child {
   margin-top: 2%;
 }
-/* line 111, ../sass/screen.scss */
-.panel .container .copy h1 i, .m-b .container .copy h1 i, .marlene .container .copy h1 i, .panel .container .copy p i, .m-b .container .copy p i, .marlene .container .copy p i, nav .container .copy h1 i, nav .container .copy p i {
-  padding-left: 15px;
-}
-/* line 114, ../sass/screen.scss */
-.panel .container .copy h1.nav, .m-b .container .copy h1.nav, .marlene .container .copy h1.nav, .panel .container .copy p.nav, .m-b .container .copy p.nav, .marlene .container .copy p.nav, nav .container .copy h1.nav, nav .container .copy p.nav {
-  margin-top: 0;
-}
-/* line 116, ../sass/screen.scss */
-.panel .container .copy h1.nav a:first-child i, .m-b .container .copy h1.nav a:first-child i, .marlene .container .copy h1.nav a:first-child i, .panel .container .copy p.nav a:first-child i, .m-b .container .copy p.nav a:first-child i, .marlene .container .copy p.nav a:first-child i, nav .container .copy h1.nav a:first-child i, nav .container .copy p.nav a:first-child i {
-  padding-right: 15px;
-  padding-left: 0 !important;
-}
-/* line 120, ../sass/screen.scss */
-.panel .container .copy h1.nav a:nth-child(2) i, .m-b .container .copy h1.nav a:nth-child(2) i, .marlene .container .copy h1.nav a:nth-child(2) i, .panel .container .copy p.nav a:nth-child(2) i, .m-b .container .copy p.nav a:nth-child(2) i, .marlene .container .copy p.nav a:nth-child(2) i, nav .container .copy h1.nav a:nth-child(2) i, nav .container .copy p.nav a:nth-child(2) i {
-  padding-left: 15px;
-}
-/* line 124, ../sass/screen.scss */
-.panel .container .copy h1.nav-only, .m-b .container .copy h1.nav-only, .marlene .container .copy h1.nav-only, .panel .container .copy p.nav-only, .m-b .container .copy p.nav-only, .marlene .container .copy p.nav-only, nav .container .copy h1.nav-only, nav .container .copy p.nav-only {
-  margin-top: 2%;
-}
 
-/* line 133, ../sass/screen.scss */
+/* line 123, ../sass/screen.scss */
 .header, nav {
   visibility: visible;
   opacity: 1.0;
 }
 
-/* line 140, ../sass/screen.scss */
+/* line 130, ../sass/screen.scss */
 nav {
   top: 2%;
   text-align: right;
@@ -196,7 +182,7 @@ nav {
   width: auto;
   right: 0;
 }
-/* line 146, ../sass/screen.scss */
+/* line 136, ../sass/screen.scss */
 nav .container {
   padding-top: 20px;
   width: auto;
@@ -205,7 +191,7 @@ nav .container {
   width: 100px;
 }
 
-/* line 164, ../sass/screen.scss */
+/* line 147, ../sass/screen.scss */
 .info {
   position: fixed;
   margin-top: 100%;
@@ -217,97 +203,114 @@ nav .container {
   visibility: visible;
   background-color: #fff;
 }
-/* line 175, ../sass/screen.scss */
+/* line 158, ../sass/screen.scss */
 .info .spacer {
   height: 10%;
 }
-/* line 180, ../sass/screen.scss */
+/* line 163, ../sass/screen.scss */
 .info .container {
   position: static;
   margin: 0 auto;
 }
 @media screen and (max-width: 750px) {
-  /* line 180, ../sass/screen.scss */
+  /* line 163, ../sass/screen.scss */
   .info .container {
     width: 75%;
   }
 }
-/* line 186, ../sass/screen.scss */
-.info .container h1, .info .container p {
+/* line 169, ../sass/screen.scss */
+.info .container h1, .info .container h2, .info .container p {
   margin: 0 auto 2% auto;
   width: 50%;
 }
-/* line 190, ../sass/screen.scss */
+/* line 173, ../sass/screen.scss */
 .info .container h1 {
+  font-size: 1.5em;
+}
+/* line 176, ../sass/screen.scss */
+.info .container h2 {
   font-size: 1em;
 }
-/* line 193, ../sass/screen.scss */
+/* line 179, ../sass/screen.scss */
 .info .container p {
   font-size: 1.3em;
   line-height: 1.3em;
   font-weight: 400;
 }
-/* line 198, ../sass/screen.scss */
+/* line 184, ../sass/screen.scss */
 .info .container .footer {
   font-size: 0.7em;
 }
+/* line 186, ../sass/screen.scss */
+.info .container .footer a img {
+  height: 20px;
+  vertical-align: middle;
+  padding-right: 7px;
+  margin-bottom: 1px;
+}
 
-/* line 211, ../sass/screen.scss */
+/* line 203, ../sass/screen.scss */
 body {
   font-size: 16px;
   color: #191e24;
   font-family: 'circular', helvetica, arial, sans-serif;
   font-weight: 400;
 }
+@media screen and (max-width: 750px) {
+  /* line 203, ../sass/screen.scss */
+  body {
+    font-size: 12px;
+  }
+}
 
-/* line 219, ../sass/screen.scss */
+/* line 214, ../sass/screen.scss */
 .header h1 {
   font-size: 3em;
 }
-/* line 221, ../sass/screen.scss */
+/* line 216, ../sass/screen.scss */
 .header h1 i {
   font-size: .8em;
 }
 
-/* line 228, ../sass/screen.scss */
+/* line 223, ../sass/screen.scss */
 nav a {
   color: #191e24;
   text-transform: uppercase;
 }
 
-/* line 234, ../sass/screen.scss */
+/* line 229, ../sass/screen.scss */
 .dark .container .copy p {
   max-width: 70%;
   font-size: 3em;
 }
 
-/* line 239, ../sass/screen.scss */
+/* line 234, ../sass/screen.scss */
 .panel p, .m-b p, .marlene p {
   font-size: 2em;
   line-height: 1.2em;
 }
-/* line 242, ../sass/screen.scss */
+/* line 237, ../sass/screen.scss */
 .panel p i, .m-b p i, .marlene p i {
   font-size: 0.8em;
 }
 
-/* line 247, ../sass/screen.scss */
+/* line 242, ../sass/screen.scss */
 .info {
   text-align: left;
   font-size: .8em;
 }
 
-/* line 252, ../sass/screen.scss */
+/* line 247, ../sass/screen.scss */
 footer {
   font-size: 80%;
 }
 
-/* line 260, ../sass/screen.scss */
+/* line 255, ../sass/screen.scss */
 nav {
   z-index: 102;
 }
 
-/* line 264, ../sass/screen.scss */
+/* line 259, ../sass/screen.scss */
 .dark {
   background: #191e24;
   color: #e5eaee;
@@ -322,23 +325,23 @@ nav {
   color: #191e24;
   background: #e5eaee;
 }
-/* line 268, ../sass/screen.scss */
+/* line 264, ../sass/screen.scss */
 .dark a, .dark i {
   color: #e5eaee;
   background: none;
 }
-/* line 272, ../sass/screen.scss */
+/* line 268, ../sass/screen.scss */
 .dark p.second {
   margin-top: 15% !important;
 }
 
-/* line 277, ../sass/screen.scss */
+/* line 273, ../sass/screen.scss */
 .light {
   background: #e5eaee;
   color: #191e24;
 }
 
-/* line 282, ../sass/screen.scss */
+/* line 278, ../sass/screen.scss */
 .m-b {
   background: url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/95495/mb_b.jpg);
   background-position: 50%;
@@ -349,7 +352,7 @@ nav {
   background-size: cover;
 }
 
-/* line 289, ../sass/screen.scss */
+/* line 285, ../sass/screen.scss */
 .marlene {
   background: url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/95495/mb_e.jpg);
   background-position: 50%;
@@ -360,47 +363,47 @@ nav {
   background-size: cover;
 }
 
-/* line 296, ../sass/screen.scss */
+/* line 292, ../sass/screen.scss */
 .a {
   background: url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/95495/mb_a.jpg);
 }
 
-/* line 301, ../sass/screen.scss */
+/* line 297, ../sass/screen.scss */
 .b1 {
   background: url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/95495/mb_b-sketch1.png);
 }
 
-/* line 306, ../sass/screen.scss */
+/* line 302, ../sass/screen.scss */
 .b2 {
   background: url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/95495/mb_b-sketch2.png);
 }
 
-/* line 311, ../sass/screen.scss */
+/* line 307, ../sass/screen.scss */
 .b3 {
-  background: url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/95495/mb_b-sketch3.png);
+  background: url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/95495/mb_b-sketch3b.png);
 }
 
-/* line 316, ../sass/screen.scss */
+/* line 312, ../sass/screen.scss */
 .b4 {
   /*  background: url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/95495/mb_b.jpg); */
 }
 
-/* line 321, ../sass/screen.scss */
+/* line 317, ../sass/screen.scss */
 .c {
   background: url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/95495/mb_c.jpg);
 }
 
-/* line 326, ../sass/screen.scss */
+/* line 322, ../sass/screen.scss */
 .c2 {
   background: url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/95495/mb_c2.jpg);
 }
 
-/* line 331, ../sass/screen.scss */
+/* line 327, ../sass/screen.scss */
 .d {
   background: url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/95495/mb_d.jpg);
 }
 
-/* line 344, ../sass/screen.scss */
+/* line 340, ../sass/screen.scss */
 .a, .b1, .b2, .b3, .c, .c2, .d, .e1, .e2, .marlene, .mb {
   background-position: 50%;
   -webkit-background-size: cover;
@@ -410,15 +413,16 @@ nav {
   background-size: cover;
 }
 
-/* line 351, ../sass/screen.scss */
+/* line 347, ../sass/screen.scss */
 .scroll-container {
   position: absolute;
   height: 80%;
   overflow: hidden;
   margin-top: 5%;
+  width: 100%;
 }
 
-/* line 359, ../sass/screen.scss */
+/* line 356, ../sass/screen.scss */
 .ps-container .ps-scrollbar-y-rail {
   position: absolute;
   right: 25%;
@@ -426,7 +430,7 @@ nav {
   background-color: rgba(25, 30, 36, 0.1);
   margin-right: -20px;
 }
-/* line 366, ../sass/screen.scss */
+/* line 363, ../sass/screen.scss */
 .ps-container .ps-scrollbar-y {
   position: absolute;
   width: 8px;
