--- a/stylesheets/screen.css
+++ b/stylesheets/screen.css
@@ -194,7 +194,7 @@ nav .container {
 /* line 147, ../sass/screen.scss */
 .info {
   position: fixed;
-  margin-top: 100%;
+  top: 100%;
   padding: 0;
   width: 100%;
   height: 100%;
