Hidden white pixel row at the bottom of dark panels

--- a/stylesheets/screen.css
+++ b/stylesheets/screen.css
@@ -1,4 +1,4 @@
-/* line 5, ../../../../../../../Library/Ruby/Gems/2.0.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
+/* line 5, ../../../../../../../../../var/lib/gems/1.9.1/gems/compass-core-1.0.1/stylesheets/compass/reset/_utilities.scss */
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -20,45 +20,45 @@ time, mark, audio, video {
   vertical-align: baseline;
 }
 
-/* line 22, ../../../../../../../Library/Ruby/Gems/2.0.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
+/* line 22, ../../../../../../../../../var/lib/gems/1.9.1/gems/compass-core-1.0.1/stylesheets/compass/reset/_utilities.scss */
 html {
   line-height: 1;
 }
 
-/* line 24, ../../../../../../../Library/Ruby/Gems/2.0.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
+/* line 24, ../../../../../../../../../var/lib/gems/1.9.1/gems/compass-core-1.0.1/stylesheets/compass/reset/_utilities.scss */
 ol, ul {
   list-style: none;
 }
 
-/* line 26, ../../../../../../../Library/Ruby/Gems/2.0.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
+/* line 26, ../../../../../../../../../var/lib/gems/1.9.1/gems/compass-core-1.0.1/stylesheets/compass/reset/_utilities.scss */
 table {
   border-collapse: collapse;
   border-spacing: 0;
 }
 
-/* line 28, ../../../../../../../Library/Ruby/Gems/2.0.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
+/* line 28, ../../../../../../../../../var/lib/gems/1.9.1/gems/compass-core-1.0.1/stylesheets/compass/reset/_utilities.scss */
 caption, th, td {
   text-align: left;
   font-weight: normal;
   vertical-align: middle;
 }
 
-/* line 30, ../../../../../../../Library/Ruby/Gems/2.0.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
+/* line 30, ../../../../../../../../../var/lib/gems/1.9.1/gems/compass-core-1.0.1/stylesheets/compass/reset/_utilities.scss */
 q, blockquote {
   quotes: none;
 }
-/* line 103, ../../../../../../../Library/Ruby/Gems/2.0.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
+/* line 103, ../../../../../../../../../var/lib/gems/1.9.1/gems/compass-core-1.0.1/stylesheets/compass/reset/_utilities.scss */
 q:before, q:after, blockquote:before, blockquote:after {
   content: "";
   content: none;
 }
 
-/* line 32, ../../../../../../../Library/Ruby/Gems/2.0.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
+/* line 32, ../../../../../../../../../var/lib/gems/1.9.1/gems/compass-core-1.0.1/stylesheets/compass/reset/_utilities.scss */
 a img {
   border: none;
 }
 
-/* line 116, ../../../../../../../Library/Ruby/Gems/2.0.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
+/* line 116, ../../../../../../../../../var/lib/gems/1.9.1/gems/compass-core-1.0.1/stylesheets/compass/reset/_utilities.scss */
 article, aside, details, figcaption, figure, footer, header, hgroup, main, menu, nav, section, summary {
   display: block;
 }
@@ -140,7 +140,7 @@ nav a.arrow {
   position: fixed;
   visibility: hidden;
   opacity: 0.0;
-  height: 100%;
+  height: 102%;
   width: 100%;
   max-width: 2000px;
 }
@@ -194,7 +194,7 @@ nav .container {
 /* line 147, ../sass/screen.scss */
 .info {
   position: fixed;
-  top: 100%;
+  top: 102%;
   padding: 0;
   width: 100%;
   height: 100%;
@@ -237,11 +237,11 @@ nav .container {
   line-height: 1.3em;
   font-weight: 400;
 }
-/* line 187, ../sass/screen.scss */
+/* line 184, ../sass/screen.scss */
 .info .container .footer {
   font-size: 0.7em;
 }
-/* line 189, ../sass/screen.scss */
+/* line 186, ../sass/screen.scss */
 .info .container .footer a img {
   height: 20px;
   vertical-align: middle;
@@ -249,7 +249,7 @@ nav .container {
   margin-bottom: 1px;
 }
 
-/* line 206, ../sass/screen.scss */
+/* line 203, ../sass/screen.scss */
 body {
   font-size: 16px;
   color: #191e24;
@@ -257,60 +257,60 @@ body {
   font-weight: 400;
 }
 @media screen and (max-width: 750px) {
-  /* line 206, ../sass/screen.scss */
+  /* line 203, ../sass/screen.scss */
   body {
     font-size: 12px;
   }
 }
 
-/* line 217, ../sass/screen.scss */
+/* line 214, ../sass/screen.scss */
 .header h1 {
   font-size: 3em;
 }
-/* line 219, ../sass/screen.scss */
+/* line 216, ../sass/screen.scss */
 .header h1 i {
   font-size: .8em;
 }
 
-/* line 226, ../sass/screen.scss */
+/* line 223, ../sass/screen.scss */
 nav a {
   color: #191e24;
   text-transform: uppercase;
 }
 
-/* line 232, ../sass/screen.scss */
+/* line 229, ../sass/screen.scss */
 .dark .container .copy p {
   max-width: 70%;
   font-size: 3em;
 }
 
-/* line 237, ../sass/screen.scss */
+/* line 234, ../sass/screen.scss */
 .panel p, .m-b p, .marlene p {
   font-size: 2em;
   line-height: 1.2em;
 }
-/* line 240, ../sass/screen.scss */
+/* line 237, ../sass/screen.scss */
 .panel p i, .m-b p i, .marlene p i {
   font-size: 0.8em;
 }
 
-/* line 245, ../sass/screen.scss */
+/* line 242, ../sass/screen.scss */
 .info {
   text-align: left;
   font-size: .8em;
 }
 
-/* line 250, ../sass/screen.scss */
+/* line 247, ../sass/screen.scss */
 footer {
   font-size: 80%;
 }
 
-/* line 258, ../sass/screen.scss */
+/* line 255, ../sass/screen.scss */
 nav {
   z-index: 102;
 }
 
-/* line 262, ../sass/screen.scss */
+/* line 259, ../sass/screen.scss */
 .dark {
   background: #191e24;
   color: #e5eaee;
@@ -325,24 +325,24 @@ nav {
   color: #191e24;
   background: #e5eaee;
 }
-/* line 267, ../sass/screen.scss */
+/* line 264, ../sass/screen.scss */
 .dark a, .dark i {
   color: #e5eaee;
   background: none;
 }
-/* line 271, ../sass/screen.scss */
+/* line 268, ../sass/screen.scss */
 .dark p.second {
   margin-top: 15% !important;
   opacity: 0;
 }
 
-/* line 277, ../sass/screen.scss */
+/* line 274, ../sass/screen.scss */
 .light {
   background: #e5eaee;
   color: #191e24;
 }
 
-/* line 282, ../sass/screen.scss */
+/* line 279, ../sass/screen.scss */
 .m-b {
   background: url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/95495/mb_b.jpg);
   background-position: 50%;
@@ -353,7 +353,7 @@ nav {
   background-size: cover;
 }
 
-/* line 289, ../sass/screen.scss */
+/* line 286, ../sass/screen.scss */
 .marlene {
   background: url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/95495/mb_e.jpg);
   background-position: 50%;
@@ -364,47 +364,47 @@ nav {
   background-size: cover;
 }
 
-/* line 296, ../sass/screen.scss */
+/* line 293, ../sass/screen.scss */
 .a {
   background: url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/95495/mb_a.jpg);
 }
 
-/* line 301, ../sass/screen.scss */
+/* line 298, ../sass/screen.scss */
 .b1 {
   background: url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/95495/mb_b-sketch1.png);
 }
 
-/* line 306, ../sass/screen.scss */
+/* line 303, ../sass/screen.scss */
 .b2 {
   background: url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/95495/mb_b-sketch2.png);
 }
 
-/* line 311, ../sass/screen.scss */
+/* line 308, ../sass/screen.scss */
 .b3 {
   background: url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/95495/mb_b-sketch3b.png);
 }
 
-/* line 316, ../sass/screen.scss */
+/* line 313, ../sass/screen.scss */
 .b4 {
   /*  background: url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/95495/mb_b.jpg); */
 }
 
-/* line 321, ../sass/screen.scss */
+/* line 318, ../sass/screen.scss */
 .c {
   background: url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/95495/mb_c.jpg);
 }
 
-/* line 326, ../sass/screen.scss */
+/* line 323, ../sass/screen.scss */
 .c2 {
   background: url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/95495/mb_c2.jpg);
 }
 
-/* line 331, ../sass/screen.scss */
+/* line 328, ../sass/screen.scss */
 .d {
   background: url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/95495/mb_d.jpg);
 }
 
-/* line 344, ../sass/screen.scss */
+/* line 341, ../sass/screen.scss */
 .a, .b1, .b2, .b3, .c, .c2, .d, .e1, .e2, .marlene, .mb {
   background-position: 50%;
   -webkit-background-size: cover;
@@ -414,7 +414,7 @@ nav {
   background-size: cover;
 }
 
-/* line 351, ../sass/screen.scss */
+/* line 348, ../sass/screen.scss */
 .scroll-container {
   position: absolute;
   height: 80%;
@@ -423,7 +423,7 @@ nav {
   width: 100%;
 }
 
-/* line 360, ../sass/screen.scss */
+/* line 357, ../sass/screen.scss */
 .ps-container .ps-scrollbar-y-rail {
   position: absolute;
   right: 25%;
@@ -431,7 +431,7 @@ nav {
   background-color: rgba(25, 30, 36, 0.1);
   margin-right: -20px;
 }
-/* line 367, ../sass/screen.scss */
+/* line 364, ../sass/screen.scss */
 .ps-container .ps-scrollbar-y {
   position: absolute;
   width: 8px;
