Modified images for better fitting in vertical screens

--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -296,17 +296,17 @@ nav {
 }
 
 .b1 {
-  background: url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/95495/mb_b-sketch1.png); 
+  background: url(../img/mb_b-sketch1.png); 
   // z-index: 99;
 }
 
 .b2 {
-  background: url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/95495/mb_b-sketch2.png); 
+  background: url(../img/mb_b-sketch2.png); 
   // z-index: 98;
 }
 
 .b3 {
-  background: url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/95495/mb_b-sketch3b.png); 
+  background: url(../img/mb_b-sketch3b.png); 
   // z-index: 97;
 }
 
